# FastAPI-resfresher

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  main.py  pyproject.toml  readme.md
src/bookstore/: main.py  models.py
src/intro/: main_test.py  router_example.py
src/nosql_example/: main.py  models.py
src/sql_example/: database.py  main.py
src/task_manager_app/: database.py  main.py  models.py  operations.py  task.csv  utils.py
tests/test_task_manager_app/: conftest.py  test_main.py
