[project]
name = "packet-fastapi-learning"
version = "0.1.0"
description = "Learning fastAPI through the packet guide."
authors = [
    {name = "Andy Henry"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
