[project]
name = "packet-fastapi-learning"
version = "0.1.0"
description = "Learning fastAPI through the packet guide."
authors = [
    {name = "Andy Henry"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
